--- a/footer/style.scss
+++ b/footer/style.scss
@@ -3,18 +3,21 @@
   padding:0px ;
   box-sizing:border-box ;
 }
+
+
+
 .nn{
-    font-size:20px ;
-    color: red($color: #b63434);
+    font-size:60px ;
+    color:  #9c8686;
+    
 }
 
+  
 
- 
+.cc{
+  background-image: url(img/bridge-1660417_1920.jpg) ;
+  width: 2000px; height: 1440px;
+  padding-top:1000px ;
+  padding-left:1000px ;
 
-
-
-
-
-
-
-
+}
