--- a/footer/style.css
+++ b/footer/style.css
@@ -6,7 +6,15 @@
 }
 
 .nn {
-  font-size: 20px;
-  color: 182;
+  font-size: 60px;
+  color: #9c8686;
+}
+
+.cc {
+  background-image: url(img/bridge-1660417_1920.jpg);
+  width: 2000px;
+  height: 1440px;
+  padding-top: 1000px;
+  padding-left: 1000px;
 }
 /*# sourceMappingURL=style.css.map */
