--- a/section-pricing/styles.scss
+++ b/section-pricing/styles.scss
@@ -11,7 +11,10 @@ body {
         text-decoration: underline;
         text-align: center;
     }
-    .cmmentaire {
-        width: 40%;
+    .comment {
+        width: 23%;
+        margin: auto;
+        border: 2px solid #8f25D6;
+        padding: 20px;
     }
 }
