--- a/section-pricing/styles.css
+++ b/section-pricing/styles.css
@@ -2,8 +2,8 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-  font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .testimoniale .test {
@@ -15,6 +15,59 @@ body {
   width: 23%;
   margin: auto;
   border: 2px solid #8f25D6;
-  padding: 20px;
+}
+
+.testimoniale .comment .border {
+  margin: 0;
+  border: 10px solid #8f25D6;
+  width: 20%;
+}
+
+.testimoniale .comment .stars {
+  padding: 10px;
+}
+
+.testimoniale .comment .stars .fa-star {
+  color: #8f25D6;
+  padding-top: 20px;
+}
+
+.testimoniale .comment p {
+  margin: 0;
+  padding: 0 10px;
+}
+
+.testimoniale .comment img {
+  border-radius: 100%;
+  width: 55%;
+  margin: 15px 10px;
+}
+
+.testimoniale .comment .finsection {
+  background-color: #8f25D6;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  margin-top: 20px;
+}
+
+.testimoniale .comment .finsection .com {
+  margin-top: 15px;
+  margin-left: -50px;
+}
+
+.testimoniale .comment .finsection p {
+  margin-top: -15px;
+  margin-left: -10px;
+}
+
+.testimoniale .comment .finsection .circle {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  margin-left: 110px;
 }
 /*# sourceMappingURL=styles.css.map */
