--- a/team and client/style.css
+++ b/team and client/style.css
@@ -7,7 +7,7 @@ img {
   height: 160px;
   border-radius: 50%;
   position: relative;
-  bottom: 100px;
+  bottom: 110px;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -33,7 +33,7 @@ h2,
 h3,
 p {
   position: relative;
-  bottom: 100px;
+  bottom: 110px;
 }
 
 .container {
@@ -56,6 +56,43 @@ p {
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
+  border-top: 7px solid #7749c1;
+  height: 490px;
+}
+
+.container .team .icon-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-decoration: none;
+  font-size: 23px;
+  color: #a5a4a4;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  -webkit-box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
+          box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
+}
+
+.container .team .icon-link:hover {
+  -webkit-box-shadow: inset -4px -4px 8px #ffffff73, inset 3px 3px 5px rgba(94, 104, 121, 0.288);
+          box-shadow: inset -4px -4px 8px #ffffff73, inset 3px 3px 5px rgba(94, 104, 121, 0.288);
+}
+
+.container .team .icon-link:hover .fa-twitter {
+  color: #1DA1F2;
+}
+
+.container .team .icon-link:hover .fa-facebook-f {
+  color: #1877F2;
+}
+
+.container .team .icon-link:hover .fa-instagram {
+  color: #E4405F;
+}
+
+.container .team .icon-link:hover .fa-linkedin-in {
+  color: #0077B5;
 }
 
 .container p {
@@ -64,6 +101,8 @@ p {
   font-weight: 100;
   height: 300px;
   color: #857e7e;
+  position: relative;
+  bottom: 110px;
 }
 
 .container ul {
@@ -72,13 +111,24 @@ p {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   list-style: none;
+  position: relative;
+  bottom: 160px;
 }
 
 .container .icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container i {
+  margin: auto;
+}
+
+.container i .fa-twitter {
+  color: #1DA1F2;
 }
 /*# sourceMappingURL=style.css.map */
