--- a/style1.css
+++ b/style1.css
@@ -62,4 +62,39 @@ body {
 .hhead nav .hmenu li a {
   padding: 1em;
 }
+
+.hhead .hbtn {
+  font-family: 'Montserrat', sans-serif;
+  background-image: linear-gradient(45deg, #7749c1, #9b59b6, #3498db);
+  border-radius: 3em 0.5em;
+  margin-top: 2.5em;
+  padding: 1em;
+  font-size: 100%;
+  background-size: 800px;
+  background-position: right;
+  color: white;
+}
+
+.hhead .hbtn {
+  -webkit-animation: hover 2s infinite;
+          animation: hover 2s infinite;
+}
+
+@-webkit-keyframes hover {
+  0% {
+    background-position: right;
+  }
+  100% {
+    background-position: left;
+  }
+}
+
+@keyframes hover {
+  0% {
+    background-position: right;
+  }
+  100% {
+    background-position: left;
+  }
+}
 /*# sourceMappingURL=style1.css.map */
