--- a/team and client/style.css
+++ b/team and client/style.css
@@ -1,22 +1,51 @@
 body {
   background-color: #Dae1eb;
   font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-img {
-  height: 160px;
-  border-radius: 50%;
+.header {
+  background: url(images/Online-Leadership-and-Team-Working.jpg) no-repeat;
+  background-attachment: fixed;
+  background-size: 1550px 600px;
+  height: 600px;
   position: relative;
-  bottom: 110px;
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  bottom: 30px;
+}
+
+.header .abg {
+  width: 100%;
+  height: 600px;
+  position: absolute;
+  z-index: 2;
+  background-color: rgba(119, 73, 193, 0.7);
+}
+
+.para {
+  text-align: center;
+  width: 600px;
+  margin: 270px auto 0 auto;
+  font-size: 19px;
+  color: whitesmoke;
+  position: relative;
+  z-index: 2;
+}
+
+.para p {
+  margin-top: 30px;
+  margin-bottom: 0;
 }
 
 h1 {
   text-align: center;
-  margin-top: 30px;
-  font-size: 38px;
-  color: #7749c1;
+  font-size: 65px;
+  color: white;
+  position: relative;
+  top: 160px;
+  z-index: 2;
+  margin: 0;
+  padding: 0;
 }
 
 h2 {
@@ -29,13 +58,6 @@ h3 {
   color: #555353;
 }
 
-h2,
-h3,
-p {
-  position: relative;
-  bottom: 110px;
-}
-
 .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -44,6 +66,15 @@ p {
       justify-content: space-around;
   text-align: center;
   margin-top: 150px;
+}
+
+.container img {
+  height: 160px;
+  border-radius: 50%;
+  position: relative;
+  bottom: 110px;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .container .team {
@@ -56,8 +87,15 @@ p {
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
-  border-top: 7px solid #7749c1;
-  height: 490px;
+  border-top: 8px solid #7749c1;
+  height: 445px;
+}
+
+.container .team h2,
+.container .team h3,
+.container .team p {
+  position: relative;
+  bottom: 110px;
 }
 
 .container .team .icon-link {
@@ -65,11 +103,11 @@ p {
   display: -ms-flexbox;
   display: flex;
   text-decoration: none;
-  font-size: 23px;
+  font-size: 19px;
   color: #a5a4a4;
   border-radius: 50%;
-  height: 50px;
-  width: 50px;
+  height: 45px;
+  width: 45px;
   -webkit-box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
           box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
 }
@@ -112,7 +150,7 @@ p {
           box-sizing: border-box;
   list-style: none;
   position: relative;
-  bottom: 160px;
+  bottom: 200px;
 }
 
 .container .icon {
