--- a/team and client/style.scss
+++ b/team and client/style.scss
@@ -1,23 +1,61 @@
 body {
     background-color: #Dae1eb;
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-img {
-    height: 160px;
-    border-radius: 50%;
+.header {
+
+    background: url(images/Online-Leadership-and-Team-Working.jpg) no-repeat;
+    background-attachment: fixed;
+    background-size: 1550px 600px;
+    height: 600px;
     position: relative;
-    bottom: 110px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    bottom: 30px;
 
 
+
+
+
+
+
+    .abg {
+        width: 100%;
+        height: 600px;
+        position: absolute;
+        z-index: 2;
+        background-color: rgba($color: #7749c1, $alpha: .7);
+    }
+}
+
+
+
+.para {
+    text-align: center;
+    width: 600px;
+    margin: 270px auto 0 auto;
+    font-size: 19px;
+    color: whitesmoke;
+    position: relative;
+    z-index: 2;
+
+    p {
+        margin-top: 30px;
+        margin-bottom: 0;
+    }
 }
 
 h1 {
     text-align: center;
-    margin-top: 30px;
-    font-size: 38px;
-    color: #7749c1;
+
+    font-size: 65px;
+    color: white;
+    position: relative;
+    top: 160px;
+    z-index: 2;
+    margin: 0;
+    padding: 0;
 }
 
 h2 {
@@ -30,18 +68,23 @@ h3 {
 }
 
 
-h2,
-h3,
-p {
-    position: relative;
-    bottom: 110px;
-}
 
 .container {
     display: flex;
     justify-content: space-around;
     text-align: center;
     margin-top: 150px;
+
+    img {
+        height: 160px;
+        border-radius: 50%;
+        position: relative;
+        bottom: 110px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
+
+    }
 
 
 
@@ -53,19 +96,27 @@ p {
         border-radius: 10px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         transition: all .4s ease-in-out;
-        border-top: 7px solid #7749c1;
-        height: 490px;
+        border-top: 8px solid #7749c1;
+        height: 445px;
+
+        h2,
+        h3,
+        p {
+            position: relative;
+            bottom: 110px;
+        }
+
 
         .icon-link {
             display: flex;
             text-decoration: none;
-            font-size: 23px;
+            font-size: 19px;
             color: rgb(165, 164, 164);
 
             border-radius: 50%;
 
-            height: 50px;
-            width: 50px;
+            height: 45px;
+            width: 45px;
             box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, .288);
 
             &:hover {
@@ -112,7 +163,7 @@ p {
         box-sizing: border-box;
         list-style: none;
         position: relative;
-        bottom: 160px;
+        bottom: 200px;
 
 
     }
