--- a/style1.scss
+++ b/style1.scss
@@ -13,12 +13,11 @@ body {
 }
 
 .hhead {
-    position: absolute;
     padding: 1em;
-    z-index: 20;
     justify-content: space-between;
     width: calc(100% - 2em);
     height: 700px;
+    background-image: url(/Images/bridge-4.jpg);
     a {
         text-decoration: none;
         color: black;
