--- a/section-pricing/styles.css
+++ b/section-pricing/styles.css
@@ -1,73 +1,101 @@
 body {
-  width: 100%;
   margin: 0;
   padding: 0;
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
+  width: 100%;
+  background-image: url(img/back.jpg);
 }
 
-.testimoniale .test {
-  text-decoration: underline;
+h1 {
   text-align: center;
+  text-decoration: underline;
 }
 
-.testimoniale .comment {
-  width: 23%;
-  margin: auto;
-  border: 2px solid #8f25D6;
-}
-
-.testimoniale .comment .border {
-  margin: 0;
-  border: 10px solid #8f25D6;
-  width: 20%;
-}
-
-.testimoniale .comment .stars {
-  padding: 10px;
-}
-
-.testimoniale .comment .stars .fa-star {
-  color: #8f25D6;
-  padding-top: 20px;
-}
-
-.testimoniale .comment p {
-  margin: 0;
-  padding: 0 10px;
-}
-
-.testimoniale .comment img {
-  border-radius: 100%;
-  width: 55%;
-  margin: 15px 10px;
-}
-
-.testimoniale .comment .finsection {
-  background-color: #8f25D6;
+.testimonaile {
+  margin-top: 20px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
-  margin-top: 20px;
+  -ms-grid-columns: (1fr)[8];
+      grid-template-columns: repeat(8, 1fr);
+  grid-column-gap: 5%;
 }
 
-.testimoniale .comment .finsection .com {
-  margin-top: 15px;
-  margin-left: -50px;
-}
-
-.testimoniale .comment .finsection p {
-  margin-top: -15px;
-  margin-left: -10px;
-}
-
-.testimoniale .comment .finsection .circle {
+.testimonaile .jone {
   -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  margin-left: 110px;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+  padding: 30px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  background-color: white;
+}
+
+.testimonaile .jone img {
+  border-radius: 100%;
+  width: 50%;
+  margin: 20px 25%;
+}
+
+.testimonaile .jone .stars {
+  color: #8f25D6;
+}
+
+.testimonaile .jone .personne h3 {
+  color: #8f25D6;
+}
+
+.testimonaile .steve {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 2;
+  grid-column: 4/6;
+  padding: 30px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  background-color: white;
+}
+
+.testimonaile .steve img {
+  border-radius: 100%;
+  width: 50%;
+  margin: 20px 25%;
+}
+
+.testimonaile .steve .stars {
+  color: #8f25D6;
+}
+
+.testimonaile .steve .personne h3 {
+  color: #8f25D6;
+}
+
+.testimonaile .ball {
+  -ms-grid-column: 6;
+  -ms-grid-column-span: 2;
+  grid-column: 6/8;
+  padding: 30px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  background-color: white;
+}
+
+.testimonaile .ball img {
+  border-radius: 100%;
+  width: 50%;
+  margin: 20px 25%;
+}
+
+.testimonaile .ball .stars {
+  color: #8f25D6;
+}
+
+.testimonaile .ball .personne h3 {
+  color: #8f25D6;
 }
 /*# sourceMappingURL=styles.css.map */
