--- a/section-pricing/styles.scss
+++ b/section-pricing/styles.scss
@@ -1,64 +1,54 @@
 $principe: #8f25D6;
-@mixin grid() {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-}
-
 body {
-    width: 100%;
     margin: 0;
     padding: 0;
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
+    width: 100%;
+    background-image: url(img/back.jpg);
 }
 
-.testimoniale {
-    .test {
-        text-decoration: underline;
-        text-align: center;
+@mixin tous {
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+    background-color: white;
+    img {
+        border-radius: 100%;
+        width: 50%;
+        margin: 20px 25%;
     }
-    .comment {
-        width: 23%;
-        margin: auto;
-        border: 2px solid $principe;
-        .border {
-            margin: 0;
-            border: 10px solid $principe;
-            width: 20%;
+    .stars {
+        color: $principe;
+    }
+    .personne {
+        h3 {
+            color: $principe;
         }
-        .stars {
-            padding: 10px;
-            .fa-star {
-                color: $principe;
-                padding-top: 20px;
-            }
-        }
-        p {
-            margin: 0;
-            padding: 0 10px;
-        }
-        img {
-            border-radius: 100%;
-            width: 55%;
-            margin: 15px 10px;
-        }
-        .finsection {
-            background-color: $principe;
-            @include grid;
-            margin-top: 20px;
-            .com {
-                margin-top: 15px;
-                margin-left: -50px;
-            }
-            p {
-                margin-top: -15px;
-                margin-left: -10px;
-            }
-            .circle {
-                grid-column: 2/3;
-                margin-left: 110px;
-            }
-        }
+    }
+}
+
+h1 {
+    text-align: center;
+    text-decoration: underline;
+}
+
+.testimonaile {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-column-gap: 5%;
+    .jone {
+        grid-column: 2/4;
+        @include tous
+    }
+    .steve {
+        grid-column: 4/6;
+        @include tous
+    }
+    .ball {
+        grid-column: 6/8;
+        @include tous
     }
 }
