commit pour style de header

--- a/style1.css
+++ b/style1.css
@@ -1,11 +1,17 @@
 body,
 html {
   margin: 0;
+  background-color: #Dae1eb;
 }
 
 body {
   height: 100%;
   font-family: 'Montserrat';
+}
+
+.fixe {
+  position: fixed;
+  width: calc(100% - 2em);
 }
 
 .hhead {
@@ -16,6 +22,7 @@ body {
   width: calc(100% - 2em);
   height: 700px;
   background-image: url(/Images/bridge-4.jpg);
+  background-attachment: fixed;
 }
 
 .hhead a {
@@ -25,6 +32,8 @@ body {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   padding: 0px 20px;
+  position: relative;
+  left: 200px;
 }
 
 .hhead a:hover {
@@ -38,10 +47,9 @@ body {
 
 .hhead .hlogo {
   width: 120px;
-  -webkit-transition: -webkit-transform 2s;
-  transition: -webkit-transform 2s;
-  transition: transform 2s;
-  transition: transform 2s, -webkit-transform 2s;
+  cursor: pointer;
+  position: relative;
+  left: 40px;
 }
 
 .hhead nav .hmenu {
@@ -52,26 +60,49 @@ body {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   width: 80%;
-  margin: 0;
-  padding: 0;
-  float: right;
-  margin-top: -70px;
+  padding: 100px;
+  margin-top: -170px;
 }
 
 .hhead nav .hmenu li a {
   padding: 1em;
 }
 
+.hhead nav .hmenu .fas fa-search {
+  position: relativ;
+  right: 150px;
+}
+
+.hhead .para {
+  text-align: center;
+  width: 600px;
+  margin: 290px auto;
+  font-size: 19px;
+  color: whitesmoke;
+}
+
+.hhead h1 {
+  text-align: center;
+  font-size: 65px;
+  color: white;
+  position: relative;
+  top: 260px;
+  z-index: 2;
+  margin: 0;
+  padding: 0;
+}
+
 .hhead .hbtn {
-  font-family: 'Montserrat', sans-serif;
   background-image: linear-gradient(45deg, #7749c1, #9b59b6, #3498db);
   border-radius: 3em 0.5em;
-  margin-top: 2.5em;
   padding: 1em;
   font-size: 100%;
   background-size: 800px;
   background-position: right;
   color: white;
+  margin-left: 680px;
+  position: relative;
+  top: -200px;
 }
 
 .hhead .hbtn {
