--- a/a propos (omar)/style.css
+++ b/a propos (omar)/style.css
@@ -4,14 +4,12 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
   width: 100%;
   font-family: 'Montserrat', sans-serif;
 }
 
 .aheader {
-  background: url(img/back1.jpg) no-repeat;
+  background: url(img/back.jpg) no-repeat;
   background-size: 1550px 600px;
   height: 600px;
 }
@@ -33,7 +31,7 @@ body {
 }
 
 .aqui {
-  color: #8F25D6;
+  color: #EB2F5B;
   font-weight: 100;
 }
 
@@ -43,63 +41,145 @@ body {
   font-weight: 900;
 }
 
+/*--------------------------------------------------------------------*/
 .aorg {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-      grid-template-areas: "apart1 apart2 apart3";
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 600px;
 }
 
 .apart1 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: apart1;
+  background-color: #82ECE8;
+  padding: 100px 30px;
+  -ms-flex-preferred-size: 32%;
+      flex-basis: 32%;
+  line-height: 40px;
 }
 
-.apart2 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  grid-area: apart2;
+.apart1 h1 {
+  line-height: 50px;
+  font-weight: 900;
 }
 
-.apart2 img {
-  width: 20%;
+.apart1 h2 {
+  padding-bottom: 20px;
+  font-weight: lighter;
+  color: #EB2F5B;
+}
+
+.hr {
+  margin-top: -10px;
+  height: 10px;
+  background: #EB2F5B;
+  width: 143px;
+}
+
+.apart1 p {
+  margin-top: 25px;
+}
+
+.aorg img {
+  width: 524px;
+  padding-right: 10px;
 }
 
 .apart3 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
-  grid-area: apart3;
+  background-color: black;
+  color: white;
+  -ms-flex-preferred-size: 35%;
+      flex-basis: 35%;
+  margin-left: -20px;
+  width: 100%;
+  padding: 140px 35px;
 }
 
-.apaart1 {
-  grid-area: apaart1;
+.apart3 h1 {
+  margin-bottom: 35px;
+  font-weight: 900;
 }
 
-.apaart2 {
-  grid-area: apaart2;
+.apart3 p {
+  margin-bottom: 30px;
+  line-height: 40px;
+}
+
+.apart3 button {
+  background-color: #EB2F5B;
+  color: white;
+  border-radius: 30px;
+  border-color: #EB2F5B;
+  height: 60px;
+  width: 180px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+/*--------------------------------------------------------------------*/
+.aorg2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 600px;
 }
 
 .apaart1 img {
-  width: 30px;
+  width: 479px;
+  height: 600px;
+}
+
+.apaart2 {
+  background-color: #FED841;
+  width: 916px;
+  margin-left: 0px;
+  padding: 140px 64px;
+}
+
+.apaart2 p {
+  margin-bottom: 40px;
+  font-weight: 900;
+  font-size: 25px;
+}
+
+.apaart2 img {
+  border-radius: 100%;
+}
+
+.apaart2 h3 span {
+  font-size: 15px;
+  font-weight: lighter;
+}
+
+.apaart2 h3 {
+  text-align: center;
+  margin-top: -70px;
+  margin-right: 40px;
 }
 
 .apaart3 {
-  grid-area: apaart3;
+  width: 72%;
+  background-color: #EB2F5B;
+  color: white;
+  padding: 140px 35px;
 }
 
-.apaaart1 {
-  grid-area: apaaart1;
+.apaart3 h2 {
+  font-weight: 900;
+  margin-bottom: 20px;
 }
 
-.apaaart2 {
-  grid-area: apaaart2;
+.apaart3 p {
+  line-height: 30px;
 }
 
-.apaaart3 {
-  grid-area: apaaart3;
+.aespace {
+  margin-bottom: 50px;
+}
+
+/*--------------------------------------------------------------------*/
+.aorg3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=style.css.map */
