--- a/section-pricing/styles.css
+++ b/section-pricing/styles.css
@@ -47,6 +47,32 @@ h1 {
   color: #8f25D6;
 }
 
+.testimonaile .jone .social {
+  display: none;
+  width: 100%;
+}
+
+.testimonaile .jone .social .fab {
+  font-size: 400%;
+  padding: 10% 3%;
+}
+
+.testimonaile .jone .social .fa-facebook-square:hover {
+  color: #1877F2;
+}
+
+.testimonaile .jone .social .fa-whatsapp-square:hover {
+  color: #25D366;
+}
+
+.testimonaile .jone .social .fa-twitter-square:hover {
+  color: #1DA1F2;
+}
+
+.testimonaile .jone:hover .social {
+  display: contents;
+}
+
 .testimonaile .steve {
   -ms-grid-column: 4;
   -ms-grid-column-span: 2;
@@ -73,6 +99,32 @@ h1 {
   color: #8f25D6;
 }
 
+.testimonaile .steve .social {
+  display: none;
+  width: 100%;
+}
+
+.testimonaile .steve .social .fab {
+  font-size: 400%;
+  padding: 10% 3%;
+}
+
+.testimonaile .steve .social .fa-facebook-square:hover {
+  color: #1877F2;
+}
+
+.testimonaile .steve .social .fa-whatsapp-square:hover {
+  color: #25D366;
+}
+
+.testimonaile .steve .social .fa-twitter-square:hover {
+  color: #1DA1F2;
+}
+
+.testimonaile .steve:hover .social {
+  display: contents;
+}
+
 .testimonaile .ball {
   -ms-grid-column: 6;
   -ms-grid-column-span: 2;
@@ -97,5 +149,31 @@ h1 {
 
 .testimonaile .ball .personne h3 {
   color: #8f25D6;
+}
+
+.testimonaile .ball .social {
+  display: none;
+  width: 100%;
+}
+
+.testimonaile .ball .social .fab {
+  font-size: 400%;
+  padding: 10% 3%;
+}
+
+.testimonaile .ball .social .fa-facebook-square:hover {
+  color: #1877F2;
+}
+
+.testimonaile .ball .social .fa-whatsapp-square:hover {
+  color: #25D366;
+}
+
+.testimonaile .ball .social .fa-twitter-square:hover {
+  color: #1DA1F2;
+}
+
+.testimonaile .ball:hover .social {
+  display: contents;
 }
 /*# sourceMappingURL=styles.css.map */
