--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,6 @@
 body,
 html {
+  padding: 0;
   margin: 0;
   background-color: #Dae1eb;
 }
@@ -22,6 +23,7 @@ body {
   width: calc(100% - 2em);
   height: 700px;
   background-image: url(/Images/bridge-4.jpg);
+  background-size: cover;
   background-attachment: fixed;
 }
 
@@ -102,7 +104,7 @@ body {
   color: white;
   margin-left: 680px;
   position: relative;
-  top: -200px;
+  top: -80px;
 }
 
 .hhead .hbtn {
@@ -126,5 +128,35 @@ body {
   100% {
     background-position: left;
   }
+}
+
+.hsec1 .hgrid {
+  height: 400px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50% auto;
+      grid-template-columns: 50% auto;
+}
+
+.hsec1 .hleft {
+  background-image: url(/Images/workplace-1245776_1920.jpg);
+  background-size: cover;
+}
+
+.hsec1 .htitle3 {
+  text-align: center;
+  font-size: 30px;
+  color: #8f25D6;
+  font-weight: bold;
+  position: relative;
+  top: 40px;
+}
+
+.hsec1 .para {
+  text-align: center;
+  width: 600px;
+  margin: 100px auto 0 auto;
+  font-size: 25px;
+  color: black;
 }
 /*# sourceMappingURL=style1.css.map */
