--- a/team and client/style.scss
+++ b/team and client/style.scss
@@ -1,3 +1,10 @@
+@mixin flex {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+
 body {
     background-color: #Dae1eb;
     font-family: 'Montserrat', sans-serif;
@@ -11,8 +18,7 @@ body {
     background-attachment: fixed;
     background-size: 1550px 600px;
     height: 600px;
-    position: relative;
-    bottom: 30px;
+
 
 
 
@@ -43,19 +49,22 @@ body {
     p {
         margin-top: 30px;
         margin-bottom: 0;
+        line-height: 150%;
     }
 }
 
-h1 {
-    text-align: center;
+.title {
+    h1 {
+        text-align: center;
 
-    font-size: 65px;
-    color: white;
-    position: relative;
-    top: 160px;
-    z-index: 2;
-    margin: 0;
-    padding: 0;
+        font-size: 65px;
+        color: white;
+        position: relative;
+        top: 160px;
+        z-index: 2;
+        margin: 0;
+        padding: 0;
+    }
 }
 
 h2 {
@@ -70,8 +79,7 @@ h3 {
 
 
 .container {
-    display: flex;
-    justify-content: space-around;
+    @include flex();
     text-align: center;
     margin-top: 150px;
 
@@ -183,5 +191,132 @@ h3 {
     }
 
 
+
+}
+
+.title1 {
+    h1 {
+        text-align: center;
+        color: #7749c1;
+        font-size: 40px;
+        margin-top: 90px;
+
+    }
+}
+
+.clients1 {
+    @include flex();
+    margin: 80px;
+
+}
+
+.clients2 {
+    @include flex();
+    margin: 0 80px 0 80px;
+}
+
+.client {
+    height: 200px;
+    width: 200px;
+    background-color: #Dae1eb;
+    border-radius: 10px;
+
+    box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, .288);
+    transition: all .7s;
+
+    i {
+        margin: 55px;
+
+        font-size: 90px;
+        color: grey;
+
+
+    }
+
+    .fa-amazon {
+        margin: 58px;
+    }
+
+    .fa-paypal {
+        margin: 57px 65px;
+    }
+
+    .fa-apple {
+        margin: 50px 65px;
+    }
+
+    .fa-fedex {
+        margin: 55px 45px;
+    }
+
+    .fa-imdb {
+        margin: 55px 60px;
+    }
+
+    .fa-youtube {
+        margin: 55px 50px;
+    }
+
+    .fa-bootstrap {
+        margin: 56px 60px;
+    }
+
+
+
+    &:hover {
+        box-shadow: inset -3px -3px 7px #ffffff73, inset 3px 3px 5px rgba(94, 104, 121, .288);
+
+        i {
+            color: #7749C1;
+            margin: 57px;
+        }
+
+        .fa-amazon {
+            margin: 59px;
+            color: rgb(231, 140, 4);
+        }
+
+        .fa-paypal {
+            margin: 58px 66px;
+            color: #00457C;
+        }
+
+        .fa-apple {
+            margin: 51px 66px;
+            color: #000000;
+        }
+
+        .fa-fedex {
+            margin: 56px 46px;
+            color: rgb(211, 51, 36);
+        }
+
+        .fa-imdb {
+            margin: 56px 61px;
+            color: rgb(187, 155, 39);
+        }
+
+        .fa-youtube {
+            margin: 56px 51px;
+            color: #FF0000;
+        }
+
+        .fa-spotify {
+            margin: 56px;
+            color: rgb(42, 194, 95);
+        }
+
+        .fa-bootstrap {
+            margin: 57px 61px;
+            color: #563D7C;
+        }
+
+        .fa-github {
+            margin: 56px;
+            color: #F05032;
+        }
+
+
+    }
 
 }
