--- a/a propos (omar)/style.css
+++ b/a propos (omar)/style.css
@@ -12,6 +12,7 @@ body {
   background: url(img/back.jpg) no-repeat;
   background-size: 1550px 600px;
   height: 600px;
+  background-attachment: fixed;
 }
 
 .aheader .abg {
@@ -42,10 +43,6 @@ body {
 }
 
 /*--------------------------------------------------------------------*/
-.fixed {
-  position: relative;
-}
-
 .aorg {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -161,7 +158,7 @@ body {
 }
 
 .apaart3 {
-  width: 72%;
+  width: 1085px;
   background-color: #EB2F5B;
   color: white;
   padding: 140px 35px;
@@ -217,7 +214,7 @@ body {
 
 .apaaart2 {
   background-color: white;
-  width: 442px;
+  width: 446px;
   padding: 140px 35px;
 }
 
